Bug 1737831 - Detect whether menu bar is visible at the beginning of fullscreen, and if so don't shift down by menubar height. r=mac-reviewers,mstange

Not sure if there's a better way to do this, but this works on a 2018 mbp with
the "Automatically show and hide the menubar on full screen" setting on and
off.

Differential Revision: https://phabricator.services.mozilla.com/D134624