widget/cocoa/nsCocoaWindow.mm
@@ -1628,7 +1628,13 @@ void nsCocoaWindow::EnteredFullScreen(bool aFullScreen, bool aNativeMode) {
   UpdateFullscreenState(aFullScreen, aNativeMode);
 }
 
+static bool gMenubarAlwaysShownInFullScreen = false;
+
 void nsCocoaWindow::UpdateFullscreenState(bool aFullScreen, bool aNativeMode) {
+  if (aFullScreen) {
+    gMenubarAlwaysShownInFullScreen = NSMenu.menuBarVisible;
+  }
+
   bool wasInFullscreen = mInFullScreenMode;
   mInFullScreenMode = aFullScreen;
   if (aNativeMode || mInNativeFullScreenMode) {
@@ -3692,10 +3698,10 @@ static const NSString* kStateWantsTitleDrawn = @"wantsTitleDrawn";
   // if the menubar is shown or is in the process of being shown, and 0
   // otherwise. Since we are multiplying the menubar height by aShownAmount, we
   // always want the full height.
-  if ([[NSApp mainMenu] menuBarHeight] > 0) {
-    mMenuBarHeight = [[NSApp mainMenu] menuBarHeight];
+  CGFloat menuBarHeight = NSApp.mainMenu.menuBarHeight;
+  if (menuBarHeight > 0.0f) {
+    mMenuBarHeight = menuBarHeight;
   }
-
   if ([[self delegate] isKindOfClass:[WindowDelegate class]]) {
     WindowDelegate* windowDelegate = (WindowDelegate*)[self delegate];
     nsCocoaWindow* geckoWindow = [windowDelegate geckoWidget];
@@ -3703,12 +3709,14 @@ static const NSString* kStateWantsTitleDrawn = @"wantsTitleDrawn";
       return;
     }
 
-    nsIWidgetListener* listener = geckoWindow->GetWidgetListener();
-    if (listener) {
+    if (nsIWidgetListener* listener = geckoWindow->GetWidgetListener()) {
       // Use the titlebar height cached in our frame rather than
       // [ToolbarWindow titlebarHeight]. titlebarHeight returns 0 when we're in
       // fullscreen.
-      CGFloat shiftByPixels = (mInitialTitlebarHeight + mMenuBarHeight) * aShownAmount;
+      CGFloat shiftByPixels = mInitialTitlebarHeight * aShownAmount;
+      if (!gMenubarAlwaysShownInFullScreen) {
+        shiftByPixels += mMenuBarHeight * aShownAmount;
+      }
       // Use mozilla::DesktopToLayoutDeviceScale rather than the
       // DesktopToLayoutDeviceScale in nsCocoaWindow. The latter accounts for
       // screen DPI. We don't want that because the revealAmount property
